[bdist_wheel]
universal = 0

[metadata]
license = 'MIT'
license_file = LICENSE

[tool:pytest]
testpaths = src/tests
norecursedirs = .git
pythonpath = src
log_level = DEBUG
log_cli_level = DEBUG
log_cli = True

[flake8]
max-line-length = 90
extend-ignore = D102

[pycodestyle]
max-line-length = 90
statistics = True